# LectureDistill

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/lecture-distill/: SKILL.md
src/: artifacts.rs  canvas_sjtu.rs  diff.rs  distill.rs  latex.rs  lib.rs  llm.rs  llm_log.rs  main.rs  markdown_typst.rs  notes.rs  pipeline.rs  ranking.rs  transcripts.rs
src/pipelines/: mod.rs  separate.rs  unified_ref_cheat.rs
src/plugin/: builtins.rs  mod.rs  node.rs  pipeline.rs  processor.rs  registry.rs  source.rs  types.rs
src/processors/: cheating_sheet.rs  course_note.rs  course_note_patch.rs  course_reference_digest.rs  mod.rs  note_patch.rs  reference_digest.rs
src/prompts/: cheat_sheet.rs  mod.rs  note_patch.rs  ref_digest.rs  unified_pipeline.rs
src/utils/: budget.rs  calibration.rs  markdown.rs  mod.rs  outline.rs  output.rs  retrieval.rs  transcript_md.rs  video.rs
src/web/: app.rs  course.rs  jobs.rs  mod.rs  plugins.rs  processes.rs  secrets.rs  sources.rs  state.rs
src/web/handlers/: canvas.rs  courses.rs  jobs.rs  llm_logs.rs  mod.rs  notes.rs  plugins.rs  processes.rs  secrets.rs  sources.rs  spa.rs  state_config.rs  transcripts.rs
templates/: default_cheatsheet.tex  default_cheatsheet.typ
tests/: cli_tests.rs  integration_tests.rs  test_canvas.py  test_cli.py  test_jobs.py  test_latex.py  test_notes.py  test_state.py  test_transcripts.py  test_web.py  utf8_tests.rs  web_tests.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
web/src/components/: Layout.tsx
web/src/pages/: Dashboard.tsx  Jobs.tsx  Logs.tsx  Outputs.tsx  Processing.tsx  Settings.tsx  Sources.tsx
