[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lecture-distill"
version = "0.1.0"
description = "SJTU Canvas course video subtitle ingestion, exam-focused distillation, and LaTeX cheat sheet rendering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "markdown-it-py>=3.0.0",
    "pypdf>=4.0.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
lecture-distill = "lecture_distill.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lecture_distill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
